2004-04-16  Ulrich Drepper  <drepper@redhat.com>

	* allocatestack.c (allocate_stack): Set reported_guardsize
	unconditionally.
	* pthread_getattr_np.c (pthread_getattr_np): Use
	reported_guardsize instead of guardsize.
	* descr.h (struct pthread): Add reported_guardsize field.

2004-04-13  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/mq_notify.c: Shut up GCC warning.

2004-04-12  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/mq-notify.c: New file.

2004-04-08  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/bits/local_lim.h (MQ_PRIO_MAX): Define.
	* sysdeps/unix/sysv/linux/alpha/bits/local_lim.h (MQ_PRIO_MAX): Define.
	* sysdeps/unix/sysv/linux/ia64/bits/local_lim.h (MQ_PRIO_MAX): Define.
	* sysdeps/unix/sysv/linux/sparc/bits/local_lim.h (MQ_PRIO_MAX): Define.
	* sysdeps/unix/sysv/linux/bits/posix_opt.h (_POSIX_MESSAGE_PASSING):
	Define.
	* sysdeps/unix/sysv/linux/i386/bits/posix_opt.h
	(_POSIX_MESSAGE_PASSING): Define.
	* sysdeps/unix/sysv/linux/ia64/bits/posix_opt.h
	(_POSIX_MESSAGE_PASSING): Define.
	* sysdeps/unix/sysv/linux/x86_64/bits/posix_opt.h
	(_POSIX_MESSAGE_PASSING): Define.

2004-04-04  Ulrich Drepper  <drepper@redhat.com>

	* tst-context1.c (fct): Check whether correct stack is used.

2004-04-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/lowlevellock.h: Never use
	matching constraints for asm mem parameters.

	* tst-clock2.c (tf): Don't define unless needed.

2004-03-30  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile (link-libc-static): Use $(static-gnulib) instead of
	$(gnulib).

2004-03-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/pthread-functions.h: Add ptr__nptl_deallocate_tsd.
	* init.c (pthread_functions): Add ptr__nptl_deallocate_tsd.
	* pthreadP.h: Declare __nptl_deallocate_tsd.
	* pthread_create.c (deallocate_tsd): Remove to __nptl_deallocate_tsd.
	Adjust caller.

	* Makefile (tests): Add tst-tsd5.
	* tst-tsd5.c: New file.
