@@ -13,41 +13,64 @@ The hdrchk test suite is available from the Open Group at
 
 	ftp://ftp.rdg.opengroup.org/pub/unsupported/stdtools/hdrchk/
 
-I've last run the suite on 2000-08-13 on a Linux/ix86 system with the
-following results [*]:
+I've last run the suite on 2004-04-17 on a Linux/x86 system running
+a Fedora Core 2 test 2 + updates with the following results [*]:
 
 	FIPS		No reported problems
 
 	POSIX90		No reported problems
 
-	XPG3		No reported problems
-
-	XPG4		No reported problems
-
-	POSIX96		Same as for UNIX98 (see below).
-	UNIX98		The message queue implementation is missing:
+	XPG3		Prototypes are now in the correct header file
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-/****** <mqueue.h> - Missing include file ******/
-/****** Start of Definitions for file mqueue.h ******/
-extern int mq_close();
-extern int mq_getattr();
-extern int mq_notify();
-extern mqd_t mq_open();
-extern ssize_t mq_receive();
-extern int mq_send();
-extern int mq_setattr();
-extern int mq_unlink();
-typedef <type> mqd_t;
-struct mq_attr { <members> };
-struct sigevent { <members> };
-/****** End of Definitions for file mqueue.h ******/
+*** Starting unistd.h
+Missing: extern char *  cuserid();
+Missing: extern int     rename();
+*** Completed unistd.h
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+	XPG4		Prototype is now in the correct header file
+			and the _POSIX2_C_VERSION symbol has been removed
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+*** Starting unistd.h
+Missing: extern char *  cuserid();
+Missing: #define        _POSIX2_C_VERSION       (-1L)
+*** Completed unistd.h
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+	POSIX96		Prototype moved
+			(using "base realtime threads" subsets)
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+*** Starting unistd.h
+Missing: extern int     pthread_atfork();
+*** Completed unistd.h
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+	UNIX98		Prototypes moved and _POSIX2_C_VERSION removed
+			(using "base realtime threads mse lfs" subset)
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+*** Starting unistd.h
+Missing: extern char *  cuserid();
+Missing: #define        _POSIX2_C_VERSION       (-1L)
+Missing: extern int     pthread_atfork();
+*** Completed unistd.h
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+
+That means all the reported issues are due to the headers having been
+cleaned up for recent POSIX/Unix specification versions.  Duplicated
+prototypes have been removed and obsolete symbols have been removed.
+Which means that as far as the tests performed by the script go, the
+headers files comply to the current POSIX/Unix specification.
+
 
 [*] Since the scripts are not clever enough for the way gcc handles
 include files (namely, putting some of them in gcc-local directory) I
 copied over the iso646.h, float.h, and stddef.h headers and ignored the
-problems resulting from the splitted limits.h file).
+problems resulting from the split limits.h file).
 
 
 Technical C standards conformance issues in glibc
